n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: weblio
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/component: workflow-automation
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
      app.kubernetes.io/component: workflow-automation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
        app.kubernetes.io/component: workflow-automation
        app.kubernetes.io/managed-by: argocd
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:1.112.3
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/weblio/n8n
            server: 192.168.86.107
